// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressIndicator renders items that are complete 1`] = `
<div class="ncf__stepped-progress o-stepped-progress"
     data-o-component="o-stepped-progress"
>
  <ol class="o-stepped-progress__steps">
    <li>
      <a href="https://foo.com"
         class="o-stepped-progress__step o-stepped-progress__step--complete"
         data-trackable="change-progress"
      >
        <span class="o-stepped-progress__label">
          Item name
          <i class="ncf__icon ncf__icon--inline-edit">
          </i>
          <span class="o-stepped-progress__status">
            (completed)
          </span>
        </span>
      </a>
    </li>
  </ol>
</div>
`;

exports[`ProgressIndicator renders items that are complete 2`] = `
<div class="ncf__stepped-progress o-stepped-progress"
     data-o-component="o-stepped-progress"
>
  <ol class="o-stepped-progress__steps">
    <li>
      <a href="https://foo.com"
         class="o-stepped-progress__step o-stepped-progress__step--complete"
         data-trackable="change-progress"
      >
        <span class="o-stepped-progress__label">
          Item name
          <i class="ncf__icon ncf__icon--inline-edit">
          </i>
          <span class="o-stepped-progress__status">
            (completed)
          </span>
        </span>
      </a>
    </li>
  </ol>
</div>
`;

exports[`ProgressIndicator renders items that are not complete and current 1`] = `
<div class="ncf__stepped-progress o-stepped-progress"
     data-o-component="o-stepped-progress"
>
  <ol class="o-stepped-progress__steps">
    <li>
      <div class="o-stepped-progress__step o-stepped-progress__step--current">
        <span class="o-stepped-progress__label">
          Item name
          <span class="o-stepped-progress__status">
            (current step)
          </span>
        </span>
      </div>
    </li>
  </ol>
</div>
`;

exports[`ProgressIndicator renders items that are not complete and current 2`] = `
<div class="ncf__stepped-progress o-stepped-progress"
     data-o-component="o-stepped-progress"
>
  <ol class="o-stepped-progress__steps">
    <li>
      <div class="o-stepped-progress__step o-stepped-progress__step--current">
        <span class="o-stepped-progress__label">
          Item name
          <span class="o-stepped-progress__status">
            (current step)
          </span>
        </span>
      </div>
    </li>
  </ol>
</div>
`;

exports[`ProgressIndicator renders items that are not complete and not current 1`] = `
<div class="ncf__stepped-progress o-stepped-progress"
     data-o-component="o-stepped-progress"
>
  <ol class="o-stepped-progress__steps">
    <li>
      <div class="o-stepped-progress__step">
        <span class="o-stepped-progress__label">
          Item name
        </span>
      </div>
    </li>
  </ol>
</div>
`;

exports[`ProgressIndicator renders items that are not complete and not current 2`] = `
<div class="ncf__stepped-progress o-stepped-progress"
     data-o-component="o-stepped-progress"
>
  <ol class="o-stepped-progress__steps">
    <li>
      <div class="o-stepped-progress__step">
        <span class="o-stepped-progress__label">
          Item name
        </span>
      </div>
    </li>
  </ol>
</div>
`;

exports[`ProgressIndicator renders with default props 1`] = `
<div class="ncf__stepped-progress o-stepped-progress"
     data-o-component="o-stepped-progress"
>
  <ol class="o-stepped-progress__steps">
    <li>
      <div class="o-stepped-progress__step">
        <span class="o-stepped-progress__label">
          Item name
        </span>
      </div>
    </li>
  </ol>
</div>
`;

exports[`ProgressIndicator renders with default props 2`] = `
<div class="ncf__stepped-progress o-stepped-progress"
     data-o-component="o-stepped-progress"
>
  <ol class="o-stepped-progress__steps">
    <li>
      <div class="o-stepped-progress__step">
        <span class="o-stepped-progress__label">
          Item name
        </span>
      </div>
    </li>
  </ol>
</div>
`;
